tests/reference/asr-template_error_08-b380a57.stderr
semantic error: Symbol not found t
 --> tests/errors/template_error_08.f90:7:9
  |
7 |         type :: T; end type
  |         ^^^^^^^^^^^^^^^^^^^^ 
